# faststrap-community

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agent/workflows/: community.md
.github/workflows/: README.md  docs.yml  publish.yml  tests.yml
docs/: README.md  api-reference.md  getting-started.md  pwa-integration.md
docs/components/: buttons.md  cards.md  forms.md  loaders.md
examples/: showcase.py
src/faststrap_community/: __init__.py  defaults.py  pwa.py  registry.py
src/faststrap_community/buttons/: __init__.py  floating_action_button.py  gradient_button.py  icon_button.py
src/faststrap_community/cards/: flip_card.py  glow_card.py  pricing_card.py  profile_card.py  reveal_card.py  stat_card.py  tilt_card.py  timeline_card.py
src/faststrap_community/effects/: parallax.py  scroll_reveal.py
src/faststrap_community/forms/: __init__.py  animated_input.py  search_bar.py  tag_input.py
src/faststrap_community/loaders/: dots.py  geometric.py  progress_ring.py  pulse.py  ring.py  skeleton.py  text.py  wave.py
src/faststrap_community/navbars/: mega_menu.py  morphing.py  slide_menu.py  vertical_mega.py
src/faststrap_community/static/css/: cards.css  community-base.css  effects.css  loaders.css  navbars.css
tests/: test_cards.py  test_components.py  test_defaults.py  test_integration.py  test_loaders.py  test_setup.py
